cp2/parser.output
Nonterminals useless in grammar

    opt_assign_test
    opt_testlist_star_expr
    opt_colonass_test
    or_xor_expr_star
    xor_and_expr_star
    and_shift_expr_star
    comma_test_star


Terminals unused in grammar

    LAMBDA


Rules useless in grammar

  285 opt_assign_test: %empty
  286                | EQUAL test

  287 opt_testlist_star_expr: %empty
  288                       | testlist_star_expr

  289 opt_colonass_test: %empty
  290                  | COLONEQUAL test

  291 or_xor_expr_star: %empty
  292                 | or_xor_expr_star VBAR xor_expr

  293 xor_and_expr_star: %empty
  294                  | xor_and_expr_star CIRCUMFLEX and_expr

  295 and_shift_expr_star: %empty
  296                    | and_shift_expr_star AMPER shift_expr

  297 comma_test_star: %empty
  298                | comma_test_star COMMA test


Grammar

    0 $accept: program $end

    1 newline_or_stmt_star: %empty
    2                     | newline_or_stmt_star NEWLINE
    3                     | newline_or_stmt_star stmt

    4 opt_par_arglist: %empty
    5                | LPAR RPAR
    6                | LPAR arglist RPAR

    7 decorator_plus: decorator
    8               | decorator_plus decorator

    9 opt_arrow_test: %empty
   10               | ARROW test

   11 opt_type_comment: %empty
   12                 | TYPE_COMMENT

   13 opt_comma: %empty
   14          | COMMA

   15 opt_colon_test: %empty
   16               | COLON test

   17 opt_semi: %empty
   18         | SEMICOLON

   19 assing_yield_or_test_plus: EQUAL yield_expr
   20                          | EQUAL testlist_star_expr
   21                          | assing_yield_or_test_plus EQUAL yield_expr
   22                          | assing_yield_or_test_plus EQUAL testlist_star_expr

   23 opt_assing_yield_or_test: %empty
   24                         | EQUAL yield_expr
   25                         | EQUAL testlist_star_expr

   26 opt_as_name: %empty
   27            | AS NAME

   28 comma_import_as_name_star: %empty
   29                          | comma_import_as_name_star COMMA import_as_name

   30 comma_dotted_as_name_star: %empty
   31                          | comma_dotted_as_name_star COMMA dotted_as_name

   32 dot_name_star: %empty
   33              | dot_name_star DOT NAME

   34 comma_name_star: %empty
   35                | comma_name_star COMMA NAME

   36 opt_comma_test: %empty
   37               | COMMA test

   38 elif_test_suite_plus: ELIF namedexpr_test COLON suite
   39                     | elif_test_suite_plus ELIF namedexpr_test COLON suite

   40 opt_else_suite: %empty
   41               | ELSE COLON suite

   42 comma_with_item_star: %empty
   43                     | comma_with_item_star COMMA with_item

   44 opt_as_expr: %empty
   45            | AS expr

   46 opt_test_as_name: %empty
   47                 | test opt_as_name

   48 stmt_plus: stmt
   49          | stmt_plus stmt

   50 opt_await: %empty
   51          | AWAIT

   52 trailer_plus: trailer
   53             | trailer_plus trailer

   54 string_plus: STRING
   55            | string_plus STRING

   56 opt_test: %empty
   57         | test

   58 opt_sliceop: %empty
   59            | sliceop

   60 comma_dict1_star: %empty
   61                 | comma_dict1_star COMMA test COLON test
   62                 | comma_dict1_star COMMA DOUBLESTAR expr

   63 except_suite_plus: except_clause COLON suite
   64                  | except_suite_plus except_clause COLON suite

   65 opt_finally_suite: %empty
   66                  | FINALLY COLON suite

   67 program: file_input

   68 file_input: newline_or_stmt_star ENDMARKER

   69 decorator: AT dotted_name opt_par_arglist NEWLINE

   70 decorators: decorator_plus

   71 decorated: decorators classdef
   72          | decorators funcdef
   73          | decorators async_funcdef

   74 async_funcdef: ASYNC funcdef

   75 funcdef: DEF NAME parameters opt_arrow_test COLON opt_type_comment func_body_suite

   76 parameters: LPAR RPAR
   77           | LPAR arguments RPAR

   78 arguments: argument COMMA arguments
   79          | argument

   80 argument: tfpdef EQUAL test
   81         | tfpdef

   82 tfpdef: NAME opt_colon_test

   83 stmt: simple_stmt
   84     | compound_stmt

   85 simple_stmt: small_stmt opt_semi NEWLINE

   86 small_stmt: expr_stmt
   87           | del_stmt
   88           | pass_stmt
   89           | flow_stmt
   90           | import_stmt
   91           | global_stmt
   92           | nonlocal_stmt
   93           | assert_stmt

   94 expr_stmt: testlist_star_expr annassign
   95          | testlist_star_expr augassign yield_expr
   96          | testlist_star_expr augassign testlist
   97          | testlist_star_expr
   98          | testlist_star_expr assing_yield_or_test_plus opt_type_comment

   99 annassign: COLON test opt_assing_yield_or_test

  100 testlist_star_expr: test opt_comma

  101 augassign: PLUSEQUAL
  102          | MINUSEQUAL
  103          | STAREQUAL
  104          | ATEQUAL
  105          | SLASHEQUAL
  106          | PERCENTEQUAL
  107          | AMPEREQUAL
  108          | VBAREQUAL
  109          | CIRCUMFLEXEQUAL
  110          | LEFTSHIFTEQUAL
  111          | RIGHTSHIFTEQUAL
  112          | DOUBLESTAREQUAL
  113          | DOUBLESLASHEQUAL

  114 del_stmt: DEL exprlist

  115 pass_stmt: PASS

  116 flow_stmt: break_stmt
  117          | continue_stmt
  118          | return_stmt
  119          | raise_stmt
  120          | yield_stmt

  121 break_stmt: BREAK

  122 continue_stmt: CONTINUE

  123 return_stmt: RETURN testlist_star_expr
  124            | RETURN

  125 yield_stmt: yield_expr

  126 raise_stmt: RAISE
  127           | RAISE test
  128           | RAISE test FROM test

  129 import_stmt: import_name
  130            | import_from

  131 import_name: IMPORT dotted_as_names

  132 import_from: FROM from_part IMPORT import_part

  133 from_part: DOT
  134          | ELLIPSIS
  135          | dotted_name

  136 import_part: STAR
  137            | LPAR import_as_names RPAR
  138            | import_as_names

  139 $@1: %empty

  140 import_as_name: NAME $@1 opt_as_name

  141 dotted_as_name: dotted_name opt_as_name

  142 import_as_names: import_as_name comma_import_as_name_star opt_comma

  143 dotted_as_names: dotted_as_name comma_dotted_as_name_star

  144 $@2: %empty

  145 dotted_name: NAME $@2 dot_name_star

  146 $@3: %empty

  147 global_stmt: GLOBAL NAME $@3 comma_name_star

  148 $@4: %empty

  149 nonlocal_stmt: NONLOCAL NAME $@4 comma_name_star

  150 assert_stmt: ASSERT test opt_comma_test

  151 compound_stmt: if_stmt
  152              | while_stmt
  153              | for_stmt
  154              | try_stmt
  155              | with_stmt
  156              | funcdef
  157              | classdef
  158              | decorated
  159              | async_stmt

  160 async_stmt: ASYNC funcdef
  161           | ASYNC with_stmt
  162           | ASYNC for_stmt

  163 if_stmt: IF namedexpr_test COLON suite elif_test_suite_plus opt_else_suite
  164        | IF namedexpr_test COLON suite opt_else_suite

  165 while_stmt: WHILE namedexpr_test COLON suite ELSE COLON suite
  166           | WHILE namedexpr_test COLON suite

  167 for_stmt: FOR exprlist IN testlist COLON opt_type_comment suite ELSE COLON suite
  168         | FOR exprlist IN testlist COLON opt_type_comment suite

  169 try_stmt: TRY COLON suite except_suite_plus opt_else_suite opt_finally_suite
  170         | TRY COLON suite FINALLY COLON suite

  171 with_stmt: WITH with_item comma_with_item_star COLON opt_type_comment suite

  172 with_item: test opt_as_expr

  173 except_clause: EXCEPT opt_test_as_name

  174 suite: simple_stmt
  175      | NEWLINE INDENT stmt_plus DEDENT

  176 namedexpr_test: test

  177 test: or_test
  178     | or_test IF or_test ELSE test

  179 test_nocond: or_test

  180 or_test: and_test OR or_test
  181        | and_test

  182 and_test: not_test AND and_test
  183         | not_test

  184 not_test: NOT not_test
  185         | comparison

  186 comparison: expr LESS comparison
  187           | expr GREATER comparison
  188           | expr EQEQUAL comparison
  189           | expr GREATEREQUAL comparison
  190           | expr LESSEQUAL comparison
  191           | expr NOTEQUAL comparison
  192           | expr IN comparison
  193           | expr NOT IN comparison
  194           | expr IS comparison
  195           | expr IS NOT comparison
  196           | expr

  197 expr: xor_expr VBAR expr
  198     | xor_expr

  199 xor_expr: and_expr CIRCUMFLEX xor_expr
  200         | and_expr

  201 and_expr: shift_expr AMPER and_expr
  202         | shift_expr

  203 shift_expr: arith_expr LEFTSHIFT shift_expr
  204           | arith_expr RIGHTSHIFT shift_expr
  205           | arith_expr

  206 arith_expr: term PLUS arith_expr
  207           | term MINUS arith_expr
  208           | term

  209 term: factor STAR term
  210     | factor AT term
  211     | factor SLASH term
  212     | factor PERCENT term
  213     | factor DOUBLESLASH term
  214     | factor

  215 factor: PLUS factor
  216       | MINUS factor
  217       | TILDE factor
  218       | power

  219 power: atom_expr
  220      | atom_expr DOUBLESTAR factor

  221 atom_expr: opt_await atom trailer_plus
  222          | opt_await atom

  223 atom: LPAR RPAR
  224     | LPAR yield_expr RPAR
  225     | LPAR testlist_comp RPAR
  226     | LSQB RSQB
  227     | LSQB subscriptlist RSQB
  228     | LBRACE RBRACE
  229     | LBRACE dictorsetmaker RBRACE
  230     | NAME
  231     | NUMBER
  232     | string_plus
  233     | ELLIPSIS
  234     | NONE
  235     | TRUE
  236     | FALSE

  237 testlist_comp: namedexpr_test comp_for
  238              | testlist

  239 trailer: LPAR RPAR
  240        | LPAR arglist RPAR
  241        | LSQB subscriptlist RSQB
  242        | DOT NAME

  243 subscriptlist: subscript COMMA subscriptlist
  244              | subscript opt_comma

  245 subscript: test
  246          | opt_test COLON opt_test opt_sliceop

  247 sliceop: COLON opt_test

  248 exprlist: expr COMMA exprlist
  249         | expr opt_comma

  250 testlist: test COMMA testlist
  251         | test opt_comma

  252 dictorsetmaker: dictorsetmaker1
  253               | dictorsetmaker2

  254 dictorsetmaker1: test COLON test comp_for
  255                | test COLON test comma_dict1_star opt_comma
  256                | DOUBLESTAR expr comp_for
  257                | DOUBLESTAR expr comma_dict1_star opt_comma

  258 dictorsetmaker2: test comp_for
  259                | test

  260 $@5: %empty

  261 classdef: CLASS NAME $@5 opt_par_arglist COLON suite

  262 arglist: argument1 COMMA arglist
  263        | argument1 opt_comma

  264 argument1: test
  265          | test comp_for
  266          | test COLONEQUAL test
  267          | test EQUAL test
  268          | DOUBLESTAR test
  269          | STAR test

  270 comp_iter: comp_for
  271          | comp_if

  272 sync_comp_for: FOR exprlist IN or_test
  273              | FOR exprlist IN or_test comp_iter

  274 comp_for: sync_comp_for
  275         | ASYNC sync_comp_for

  276 comp_if: IF test_nocond
  277        | IF test_nocond comp_iter

  278 yield_expr: YIELD
  279           | YIELD yield_arg

  280 yield_arg: FROM test
  281          | testlist_star_expr

  282 func_body_suite: simple_stmt
  283                | NEWLINE INDENT stmt_plus DEDENT
  284                | NEWLINE TYPE_COMMENT NEWLINE INDENT stmt_plus DEDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENDMARKER (258) 68
    AND (259) 182
    AMPER (260) 201
    AMPEREQUAL (261) 107
    ARROW (262) 10
    AS (263) 27 45
    ASSERT (264) 150
    EQUAL (265) 19 20 21 22 24 25 80 267
    ASYNC (266) 74 160 161 162 275
    AT (267) 69 210
    ATEQUAL (268) 104
    AWAIT (269) 51
    BREAK (270) 121
    CLASS (271) 261
    COLON (272) 16 38 39 41 61 63 64 66 75 99 163 164 165 166 167 168 169 170 171 246 247 254 255 261
    COLONEQUAL (273) 266
    COMMA (274) 14 29 31 35 37 43 61 62 78 243 248 250 262
    CONTINUE (275) 122
    DEDENT (276) 175 283 284
    DEF (277) 75
    DEL (278) 114
    DOT (279) 33 133 242
    DOUBLESLASH (280) 213
    DOUBLESLASHEQUAL (281) 113
    DOUBLESTAR (282) 62 220 256 257 268
    DOUBLESTAREQUAL (283) 112
    EQEQUAL (284) 188
    ELIF (285) 38 39
    ELLIPSIS (286) 134 233
    ELSE (287) 41 165 167 178
    EXCEPT (288) 173
    FALSE (289) 236
    FOR (290) 167 168 272 273
    FINALLY (291) 66 170
    FROM (292) 128 132 280
    GREATEREQUAL (293) 189
    GLOBAL (294) 147
    GREATER (295) 187
    IF (296) 163 164 178 276 277
    IMPORT (297) 131 132
    IN (298) 167 168 192 193 272 273
    INDENT (299) 175 283 284
    IS (300) 194 195
    LAMBDA (301)
    LSQB (302) 226 227 241
    LBRACE (303) 228 229
    LESSEQUAL (304) 190
    LPAR (305) 5 6 76 77 137 223 224 225 239 240
    LEFTSHIFT (306) 203
    LEFTSHIFTEQUAL (307) 110
    LESS (308) 186
    MINUS (309) 207 216
    MINUSEQUAL (310) 102
    NAME (311) 27 33 35 75 82 140 145 147 149 230 242 261
    NOTEQUAL (312) 191
    NEWLINE (313) 2 69 85 175 283 284
    NONE (314) 234
    NONLOCAL (315) 149
    NOT (316) 184 193 195
    NUMBER (317) 231
    OR (318) 180
    VBAR (319) 197
    VBAREQUAL (320) 108
    PASS (321) 115
    PERCENT (322) 212
    PERCENTEQUAL (323) 106
    PLUS (324) 206 215
    PLUSEQUAL (325) 101
    RAISE (326) 126 127 128
    RSQB (327) 226 227 241
    RBRACE (328) 228 229
    RETURN (329) 123 124
    RPAR (330) 5 6 76 77 137 223 224 225 239 240
    RIGHTSHIFT (331) 204
    RIGHTSHIFTEQUAL (332) 111
    SEMICOLON (333) 18
    SLASH (334) 211
    SLASHEQUAL (335) 105
    STAR (336) 136 209 269
    STAREQUAL (337) 103
    STRING (338) 54 55
    TILDE (339) 217
    TRUE (340) 235
    TRY (341) 169 170
    TYPE_COMMENT (342) 12 284
    WITH (343) 171
    WHILE (344) 165 166
    CIRCUMFLEX (345) 199
    CIRCUMFLEXEQUAL (346) 109
    YIELD (347) 278 279


Nonterminals, with rules where they appear

    $accept (93)
        on left: 0
    newline_or_stmt_star (94)
        on left: 1 2 3
        on right: 2 3 68
    opt_par_arglist (95)
        on left: 4 5 6
        on right: 69 261
    decorator_plus (96)
        on left: 7 8
        on right: 8 70
    opt_arrow_test (97)
        on left: 9 10
        on right: 75
    opt_type_comment (98)
        on left: 11 12
        on right: 75 98 167 168 171
    opt_comma (99)
        on left: 13 14
        on right: 100 142 244 249 251 255 257 263
    opt_colon_test (100)
        on left: 15 16
        on right: 82
    opt_semi (101)
        on left: 17 18
        on right: 85
    assing_yield_or_test_plus (102)
        on left: 19 20 21 22
        on right: 21 22 98
    opt_assing_yield_or_test (103)
        on left: 23 24 25
        on right: 99
    opt_as_name (104)
        on left: 26 27
        on right: 47 140 141
    comma_import_as_name_star (105)
        on left: 28 29
        on right: 29 142
    comma_dotted_as_name_star (106)
        on left: 30 31
        on right: 31 143
    dot_name_star (107)
        on left: 32 33
        on right: 33 145
    comma_name_star (108)
        on left: 34 35
        on right: 35 147 149
    opt_comma_test (109)
        on left: 36 37
        on right: 150
    elif_test_suite_plus (110)
        on left: 38 39
        on right: 39 163
    opt_else_suite (111)
        on left: 40 41
        on right: 163 164 169
    comma_with_item_star (112)
        on left: 42 43
        on right: 43 171
    opt_as_expr (113)
        on left: 44 45
        on right: 172
    opt_test_as_name (114)
        on left: 46 47
        on right: 173
    stmt_plus (115)
        on left: 48 49
        on right: 49 175 283 284
    opt_await (116)
        on left: 50 51
        on right: 221 222
    trailer_plus (117)
        on left: 52 53
        on right: 53 221
    string_plus (118)
        on left: 54 55
        on right: 55 232
    opt_test (119)
        on left: 56 57
        on right: 246 247
    opt_sliceop (120)
        on left: 58 59
        on right: 246
    comma_dict1_star (121)
        on left: 60 61 62
        on right: 61 62 255 257
    except_suite_plus (122)
        on left: 63 64
        on right: 64 169
    opt_finally_suite (123)
        on left: 65 66
        on right: 169
    program (124)
        on left: 67
        on right: 0
    file_input (125)
        on left: 68
        on right: 67
    decorator (126)
        on left: 69
        on right: 7 8
    decorators (127)
        on left: 70
        on right: 71 72 73
    decorated (128)
        on left: 71 72 73
        on right: 158
    async_funcdef (129)
        on left: 74
        on right: 73
    funcdef (130)
        on left: 75
        on right: 72 74 156 160
    parameters (131)
        on left: 76 77
        on right: 75
    arguments (132)
        on left: 78 79
        on right: 77 78
    argument (133)
        on left: 80 81
        on right: 78 79
    tfpdef (134)
        on left: 82
        on right: 80 81
    stmt (135)
        on left: 83 84
        on right: 3 48 49
    simple_stmt (136)
        on left: 85
        on right: 83 174 282
    small_stmt (137)
        on left: 86 87 88 89 90 91 92 93
        on right: 85
    expr_stmt (138)
        on left: 94 95 96 97 98
        on right: 86
    annassign (139)
        on left: 99
        on right: 94
    testlist_star_expr (140)
        on left: 100
        on right: 20 22 25 94 95 96 97 98 123 281
    augassign (141)
        on left: 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 95 96
    del_stmt (142)
        on left: 114
        on right: 87
    pass_stmt (143)
        on left: 115
        on right: 88
    flow_stmt (144)
        on left: 116 117 118 119 120
        on right: 89
    break_stmt (145)
        on left: 121
        on right: 116
    continue_stmt (146)
        on left: 122
        on right: 117
    return_stmt (147)
        on left: 123 124
        on right: 118
    yield_stmt (148)
        on left: 125
        on right: 120
    raise_stmt (149)
        on left: 126 127 128
        on right: 119
    import_stmt (150)
        on left: 129 130
        on right: 90
    import_name (151)
        on left: 131
        on right: 129
    import_from (152)
        on left: 132
        on right: 130
    from_part (153)
        on left: 133 134 135
        on right: 132
    import_part (154)
        on left: 136 137 138
        on right: 132
    import_as_name (155)
        on left: 140
        on right: 29 142
    $@1 (156)
        on left: 139
        on right: 140
    dotted_as_name (157)
        on left: 141
        on right: 31 143
    import_as_names (158)
        on left: 142
        on right: 137 138
    dotted_as_names (159)
        on left: 143
        on right: 131
    dotted_name (160)
        on left: 145
        on right: 69 135 141
    $@2 (161)
        on left: 144
        on right: 145
    global_stmt (162)
        on left: 147
        on right: 91
    $@3 (163)
        on left: 146
        on right: 147
    nonlocal_stmt (164)
        on left: 149
        on right: 92
    $@4 (165)
        on left: 148
        on right: 149
    assert_stmt (166)
        on left: 150
        on right: 93
    compound_stmt (167)
        on left: 151 152 153 154 155 156 157 158 159
        on right: 84
    async_stmt (168)
        on left: 160 161 162
        on right: 159
    if_stmt (169)
        on left: 163 164
        on right: 151
    while_stmt (170)
        on left: 165 166
        on right: 152
    for_stmt (171)
        on left: 167 168
        on right: 153 162
    try_stmt (172)
        on left: 169 170
        on right: 154
    with_stmt (173)
        on left: 171
        on right: 155 161
    with_item (174)
        on left: 172
        on right: 43 171
    except_clause (175)
        on left: 173
        on right: 63 64
    suite (176)
        on left: 174 175
        on right: 38 39 41 63 64 66 163 164 165 166 167 168 169 170 171 261
    namedexpr_test (177)
        on left: 176
        on right: 38 39 163 164 165 166 237
    test (178)
        on left: 177 178
        on right: 10 16 37 47 57 61 80 99 100 127 128 150 172 176 178 245 250 251 254 255 258 259 264 265 266 267 268 269 280
    test_nocond (179)
        on left: 179
        on right: 276 277
    or_test (180)
        on left: 180 181
        on right: 177 178 179 180 272 273
    and_test (181)
        on left: 182 183
        on right: 180 181 182
    not_test (182)
        on left: 184 185
        on right: 182 183 184
    comparison (183)
        on left: 186 187 188 189 190 191 192 193 194 195 196
        on right: 185 186 187 188 189 190 191 192 193 194 195
    expr (184)
        on left: 197 198
        on right: 45 62 186 187 188 189 190 191 192 193 194 195 196 197 248 249 256 257
    xor_expr (185)
        on left: 199 200
        on right: 197 198 199
    and_expr (186)
        on left: 201 202
        on right: 199 200 201
    shift_expr (187)
        on left: 203 204 205
        on right: 201 202 203 204
    arith_expr (188)
        on left: 206 207 208
        on right: 203 204 205 206 207
    term (189)
        on left: 209 210 211 212 213 214
        on right: 206 207 208 209 210 211 212 213
    factor (190)
        on left: 215 216 217 218
        on right: 209 210 211 212 213 214 215 216 217 220
    power (191)
        on left: 219 220
        on right: 218
    atom_expr (192)
        on left: 221 222
        on right: 219 220
    atom (193)
        on left: 223 224 225 226 227 228 229 230 231 232 233 234 235 236
        on right: 221 222
    testlist_comp (194)
        on left: 237 238
        on right: 225
    trailer (195)
        on left: 239 240 241 242
        on right: 52 53
    subscriptlist (196)
        on left: 243 244
        on right: 227 241 243
    subscript (197)
        on left: 245 246
        on right: 243 244
    sliceop (198)
        on left: 247
        on right: 59
    exprlist (199)
        on left: 248 249
        on right: 114 167 168 248 272 273
    testlist (200)
        on left: 250 251
        on right: 96 167 168 238 250
    dictorsetmaker (201)
        on left: 252 253
        on right: 229
    dictorsetmaker1 (202)
        on left: 254 255 256 257
        on right: 252
    dictorsetmaker2 (203)
        on left: 258 259
        on right: 253
    classdef (204)
        on left: 261
        on right: 71 157
    $@5 (205)
        on left: 260
        on right: 261
    arglist (206)
        on left: 262 263
        on right: 6 240 262
    argument1 (207)
        on left: 264 265 266 267 268 269
        on right: 262 263
    comp_iter (208)
        on left: 270 271
        on right: 273 277
    sync_comp_for (209)
        on left: 272 273
        on right: 274 275
    comp_for (210)
        on left: 274 275
        on right: 237 254 256 258 265 270
    comp_if (211)
        on left: 276 277
        on right: 271
    yield_expr (212)
        on left: 278 279
        on right: 19 21 24 95 125 224
    yield_arg (213)
        on left: 280 281
        on right: 279
    func_body_suite (214)
        on left: 282 283 284
        on right: 75


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (newline_or_stmt_star)

    newline_or_stmt_star  go to state 1
    program               go to state 2
    file_input            go to state 3


State 1

    2 newline_or_stmt_star: newline_or_stmt_star • NEWLINE
    3                     | newline_or_stmt_star • stmt
   68 file_input: newline_or_stmt_star • ENDMARKER

    ENDMARKER  shift, and go to state 4
    ASSERT     shift, and go to state 5
    ASYNC      shift, and go to state 6
    AT         shift, and go to state 7
    AWAIT      shift, and go to state 8
    BREAK      shift, and go to state 9
    CLASS      shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DEF        shift, and go to state 12
    DEL        shift, and go to state 13
    FOR        shift, and go to state 14
    FROM       shift, and go to state 15
    GLOBAL     shift, and go to state 16
    IF         shift, and go to state 17
    IMPORT     shift, and go to state 18
    MINUS      shift, and go to state 19
    NEWLINE    shift, and go to state 20
    NONLOCAL   shift, and go to state 21
    NOT        shift, and go to state 22
    PASS       shift, and go to state 23
    PLUS       shift, and go to state 24
    RAISE      shift, and go to state 25
    RETURN     shift, and go to state 26
    TILDE      shift, and go to state 27
    TRY        shift, and go to state 28
    WITH       shift, and go to state 29
    WHILE      shift, and go to state 30
    YIELD      shift, and go to state 31

    $default  reduce using rule 50 (opt_await)

    decorator_plus      go to state 32
    opt_await           go to state 33
    decorator           go to state 34
    decorators          go to state 35
    decorated           go to state 36
    funcdef             go to state 37
    stmt                go to state 38
    simple_stmt         go to state 39
    small_stmt          go to state 40
    expr_stmt           go to state 41
    testlist_star_expr  go to state 42
    del_stmt            go to state 43
    pass_stmt           go to state 44
    flow_stmt           go to state 45
    break_stmt          go to state 46
    continue_stmt       go to state 47
    return_stmt         go to state 48
    yield_stmt          go to state 49
    raise_stmt          go to state 50
    import_stmt         go to state 51
    import_name         go to state 52
    import_from         go to state 53
    global_stmt         go to state 54
    nonlocal_stmt       go to state 55
    assert_stmt         go to state 56
    compound_stmt       go to state 57
    async_stmt          go to state 58
    if_stmt             go to state 59
    while_stmt          go to state 60
    for_stmt            go to state 61
    try_stmt            go to state 62
    with_stmt           go to state 63
    test                go to state 64
    or_test             go to state 65
    and_test            go to state 66
    not_test            go to state 67
    comparison          go to state 68
    expr                go to state 69
    xor_expr            go to state 70
    and_expr            go to state 71
    shift_expr          go to state 72
    arith_expr          go to state 73
    term                go to state 74
    factor              go to state 75
    power               go to state 76
    atom_expr           go to state 77
    classdef            go to state 78
    yield_expr          go to state 79


State 2

    0 $accept: program • $end

    $end  shift, and go to state 80


State 3

   67 program: file_input •

    $default  reduce using rule 67 (program)


State 4

   68 file_input: newline_or_stmt_star ENDMARKER •

    $default  reduce using rule 68 (file_input)


State 5

  150 assert_stmt: ASSERT • test opt_comma_test

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    test        go to state 81
    or_test     go to state 65
    and_test    go to state 66
    not_test    go to state 67
    comparison  go to state 68
    expr        go to state 69
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77


State 6

  160 async_stmt: ASYNC • funcdef
  161           | ASYNC • with_stmt
  162           | ASYNC • for_stmt

    DEF   shift, and go to state 12
    FOR   shift, and go to state 14
    WITH  shift, and go to state 29

    funcdef    go to state 82
    for_stmt   go to state 83
    with_stmt  go to state 84


State 7

   69 decorator: AT • dotted_name opt_par_arglist NEWLINE

    NAME  shift, and go to state 85

    dotted_name  go to state 86


State 8

   51 opt_await: AWAIT •

    $default  reduce using rule 51 (opt_await)


State 9

  121 break_stmt: BREAK •

    $default  reduce using rule 121 (break_stmt)


State 10

  261 classdef: CLASS • NAME $@5 opt_par_arglist COLON suite

    NAME  shift, and go to state 87


State 11

  122 continue_stmt: CONTINUE •

    $default  reduce using rule 122 (continue_stmt)


State 12

   75 funcdef: DEF • NAME parameters opt_arrow_test COLON opt_type_comment func_body_suite

    NAME  shift, and go to state 88


State 13

  114 del_stmt: DEL • exprlist

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    expr        go to state 89
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77
    exprlist    go to state 90


State 14

  167 for_stmt: FOR • exprlist IN testlist COLON opt_type_comment suite ELSE COLON suite
  168         | FOR • exprlist IN testlist COLON opt_type_comment suite

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    expr        go to state 89
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77
    exprlist    go to state 91


State 15

  132 import_from: FROM • from_part IMPORT import_part

    DOT       shift, and go to state 92
    ELLIPSIS  shift, and go to state 93
    NAME      shift, and go to state 85

    from_part    go to state 94
    dotted_name  go to state 95


State 16

  147 global_stmt: GLOBAL • NAME $@3 comma_name_star

    NAME  shift, and go to state 96


State 17

  163 if_stmt: IF • namedexpr_test COLON suite elif_test_suite_plus opt_else_suite
  164        | IF • namedexpr_test COLON suite opt_else_suite

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await       go to state 33
    namedexpr_test  go to state 97
    test            go to state 98
    or_test         go to state 65
    and_test        go to state 66
    not_test        go to state 67
    comparison      go to state 68
    expr            go to state 69
    xor_expr        go to state 70
    and_expr        go to state 71
    shift_expr      go to state 72
    arith_expr      go to state 73
    term            go to state 74
    factor          go to state 75
    power           go to state 76
    atom_expr       go to state 77


State 18

  131 import_name: IMPORT • dotted_as_names

    NAME  shift, and go to state 85

    dotted_as_name   go to state 99
    dotted_as_names  go to state 100
    dotted_name      go to state 101


State 19

  216 factor: MINUS • factor

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await  go to state 33
    factor     go to state 102
    power      go to state 76
    atom_expr  go to state 77


State 20

    2 newline_or_stmt_star: newline_or_stmt_star NEWLINE •

    $default  reduce using rule 2 (newline_or_stmt_star)


State 21

  149 nonlocal_stmt: NONLOCAL • NAME $@4 comma_name_star

    NAME  shift, and go to state 103


State 22

  184 not_test: NOT • not_test

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await   go to state 33
    not_test    go to state 104
    comparison  go to state 68
    expr        go to state 69
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77


State 23

  115 pass_stmt: PASS •

    $default  reduce using rule 115 (pass_stmt)


State 24

  215 factor: PLUS • factor

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    $default  reduce using rule 50 (opt_await)

    opt_await  go to state 33
    factor     go to state 105
    power      go to state 76
    atom_expr  go to state 77


State 25

  126 raise_stmt: RAISE •
  127           | RAISE • test
  128           | RAISE • test FROM test

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    NEWLINE    reduce using rule 126 (raise_stmt)
    SEMICOLON  reduce using rule 126 (raise_stmt)
    $default   reduce using rule 50 (opt_await)

    opt_await   go to state 33
    test        go to state 106
    or_test     go to state 65
    and_test    go to state 66
    not_test    go to state 67
    comparison  go to state 68
    expr        go to state 69
    xor_expr    go to state 70
    and_expr    go to state 71
    shift_expr  go to state 72
    arith_expr  go to state 73
    term        go to state 74
    factor      go to state 75
    power       go to state 76
    atom_expr   go to state 77


State 26

  123 return_stmt: RETURN • testlist_star_expr
  124            | RETURN •

    AWAIT  shift, and go to state 8
    MINUS  shift, and go to state 19
    NOT    shift, and go to state 22
    PLUS   shift, and go to state 24
    TILDE  shift, and go to state 27

    NEWLINE    reduce using rule 124 (return_stmt)
    SEMICOLON  reduce using rule 124 (return_stmt)
    $default   reduce using rule 50 (opt_await)
